MBS-9409: Fix input icon alignment

--- a/styles.scss
+++ b/styles.scss
@@ -137,7 +137,7 @@
         position: relative;
         .ai_chat_icon {
             position: absolute;
-            bottom: 1.6rem;
+            top: 1.2rem;
             left: .5rem;
         }
     }
